--- a/src/test/java/org/spring/boot/test/niuke/sort/十大经典排序算法.md
+++ b/src/test/java/org/spring/boot/test/niuke/sort/十大经典排序算法.md
@@ -2,9 +2,9 @@
 
 [数据结构与算法](https://www.runoob.com/data-structures/data-structures-tutorial.html)
 
-![sort.png](sort.png)
+![sort.png](docs/sort.png)
 
-![0B319B38-B70E-4118-B897-74EFA7E368F9.png](0B319B38-B70E-4118-B897-74EFA7E368F9.png)
+![0B319B38-B70E-4118-B897-74EFA7E368F9.png](docs/0B319B38-B70E-4118-B897-74EFA7E368F9.png)
 
 关于时间复杂度
 平方阶 (O(n2)) 排序 各类简单排序：直接插入、直接选择和冒泡排序。
@@ -22,6 +22,7 @@ O(n1+§)) 排序，§ 是介于 0 和 1 之间的常数。 希尔排序
 不是稳定的排序算法：选择排序、快速排序、希尔排序、堆排序。
 
 名词解释：
+
 - n：数据规模
 - k："桶"的个数
 - In-place：占用常数内存，不占用额外内存
@@ -29,11 +30,12 @@ O(n1+§)) 排序，§ 是介于 0 和 1 之间的常数。 希尔排序
 - 稳定性：排序后 2 个相等键值的顺序和排序之前它们的顺序相同
 
 # 包含以下内容：
-1. [冒泡排序](InsertSortDemo.java)
 
-2. [选择排序](InsertSortDemo.java)
-2. 选择排序
-3. 插入排序
+1. [冒泡排序](BubbleSortDemo.java)
+   ![bubbleSort.gif](docs/bubbleSort.gif)
+2. [选择排序](SelectSortDemo.java)
+   ![selectionSort.gif](docs%2FselectionSort.gif)
+3. [插入排序](InsertSortDemo.java)
 4. 希尔排序
 5. 归并排序
 6. 快速排序
