--- a/src/test/java/org/spring/boot/test/niuke/sort/十大经典排序算法.md
+++ b/src/test/java/org/spring/boot/test/niuke/sort/十大经典排序算法.md
@@ -36,6 +36,7 @@ O(n1+§)) 排序，§ 是介于 0 和 1 之间的常数。 希尔排序
 2. [选择排序](SelectSortDemo.java)
    ![selectionSort.gif](docs%2FselectionSort.gif)
 3. [插入排序](InsertSortDemo.java)
+   ![insertionSort.gif](docs%2FinsertionSort.gif)
 4. 希尔排序
 5. 归并排序
 6. 快速排序
