--- a/src/test/java/org/spring/boot/test/niuke/sort/十大经典排序算法.md
+++ b/src/test/java/org/spring/boot/test/niuke/sort/十大经典排序算法.md
@@ -39,8 +39,10 @@ O(n1+§)) 排序，§ 是介于 0 和 1 之间的常数。 希尔排序
    ![insertionSort.gif](docs/insertionSort.gif)
 4. [希尔排序](ShellSortDemo.java)
    ![shellSort.gif](docs/shellSort.gif)
-5. [归并排序]()
-6. 快速排序
+5. [归并排序](MergeSortDemo.java)
+   ![mergeSort.gif](docs%2FmergeSort.gif)
+6. [快速排序](QuickSortDemo.java)
+   ![quickSort.gif](docs%2FquickSort.gif)
 7. 堆排序
 8. 计数排序
 9. 桶排序
